--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -30,5 +30,5 @@ jobs:
           platforms: linux/amd64
           registry: ghcr.io
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ghcr.io/${{ github.actor }}/openwebui-content-sync:latest
+          tags: ghcr.io/${{ github.repository_owner.toLowerCase() }}/${{ github.repository_name.toLowerCase() }}:latest
           cache-from: type=gha
