Slack integration adapter  (#10)
* add local file support for local directories

* add slack adapter

* add slack files

* fix rebase and add docs

* get channel sync fixed and working

* add missing files

* fix unit tests

* fix tests

---------

Co-authored-by: CastAIPhil <phil@Phils-MacBook-Pro.local>

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -65,6 +65,40 @@ local_folders:
     - folder_path: "/path/to/notes"
       knowledge_id: "notes-knowledge-base"
 
+# Slack adapter configuration
+slack:
+  enabled: false
+  token: ""  # Set via SLACK_TOKEN environment variable
+  channel_mappings:
+    - channel_id: "C1234567890"  # Slack channel ID
+      channel_name: "general"     # Channel name for display
+      knowledge_id: "general-knowledge-base"
+    - channel_id: "C0987654321"
+      channel_name: "dev-team"
+      knowledge_id: "dev-knowledge-base"
+    - channel_id: "C1122334455"
+      channel_name: "support"
+      knowledge_id: "support-knowledge-base"
+  regex_patterns:
+    # Auto-discover and join channels matching regex patterns
+    - pattern: "^sales-.*-internal$"     # Matches channels like "sales-team-internal", "sales-west-internal"
+      knowledge_id: "sales-knowledge-base"
+      auto_join: true                    # Automatically join matching channels
+    - pattern: "^dev-.*"                # Matches channels like "dev-frontend", "dev-backend", "dev-ops"
+      knowledge_id: "dev-knowledge-base"
+      auto_join: true
+    - pattern: "^support-.*"             # Matches channels like "support-tier1", "support-escalation"
+      knowledge_id: "support-knowledge-base"
+      auto_join: false                   # Discover but don't auto-join (manual approval required)
+    - pattern: "^alert-.*"               # Matches channels like "alert-production", "alert-staging"
+      knowledge_id: "monitoring-knowledge-base"
+      auto_join: true
+  days_to_fetch: 30        # Number of days to fetch messages (default: 30)
+  maintain_history: false  # Whether to maintain indefinite history or age off (default: false)
+  message_limit: 1000      # Max messages per channel per run (default: 1000)
+  include_threads: true    # Whether to include thread messages (default: true)
+  include_reactions: false # Whether to include reaction data (default: false)
+
 # Example configurations for different environments:
 
 # Development
