--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -35,3 +35,16 @@ data:
   # Base64 encoded Confluence API key
   # echo -n "your-confluence-api-key" | base64
   api-key: eW91ci1jb25mbHVlbmNlLWFwaS1rZXk=
+
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: slack-secrets
+  labels:
+    app: openwebui-content-sync
+type: Opaque
+data:
+  # Base64 encoded Slack token
+  # echo -n "your-slack-token" | base64
+  token: eW91ci1zbGFjay10b2tlbg==
